[metadata]
name = markdown_code_blocks
version = 2.0.0
description = Generate html from markdown with code-block highlighting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/markdown-code-blocks
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = markdown_code_blocks
install_requires =
    mistune
    pygments
python_requires = >=3.6

[options.entry_points]
console_scripts =
    markdown-code-blocks-highlight=markdown_code_blocks:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
