[metadata]
name = markdown_code_blocks
version = 3.1.0
description = Generate html from markdown with code-block highlighting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/markdown-code-blocks
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = markdown_code_blocks
install_requires =
    mistune>=2,<3
    pygments
python_requires = >=3.10

[options.entry_points]
console_scripts =
    markdown-code-blocks-highlight=markdown_code_blocks:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
